# RAG-CHATBOT

./: .gitignore  LICENSE  README.md  app.py  intro.ipynb  main.py  pyproject.toml  requirements.txt  utils.py
prompts/: llm_prompt.py
rag/: data_chunking.py  data_retrieving.py  embedding_generating.py  final_pipeline.py
